resolved overflow issue

--- a/src/Components/Calendar/Calendar.css
+++ b/src/Components/Calendar/Calendar.css
@@ -1,3 +1,7 @@
 .calendarContainer {
     background-color: white;
 }
+
+.rbc-month-row {
+    overflow: visible !important;
+}
